--- a/research.html
+++ b/research.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About Me</title>
+  <title>Research</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,9 +15,8 @@
   </header>
   
   <main>
-    <h1>About Me</h1>
-    <p>Hello! I am [Your Name].</p>
-    <p>Welcome to my personal website.</p>
+    <h1>Research</h1>
+    <p>Here is a list of my research projects.</p>
   </main>
 </body>
 </html>
