--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About Me</title>
+  <title>Ibrahim</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -10,14 +10,19 @@
     <nav>
       <a href="index.html">About</a>
       <a href="research.html">Research</a>
-      <a href="work.html">Work</a>
+      <a href="work.html">Work & Projects</a>
     </nav>
   </header>
   
   <main>
-    <h1>About Me</h1>
-    <p>Hello! I am [Your Name].</p>
-    <p>Welcome to my personal website.</p>
+    <h1 class = 'index'>  Ibrahim Sheikh</h1>
+
+    <p class = 'intro'>Hi, I'm Ibrahim and I love to learn about how things work. </p>
+    <p class = 'brief'>I am currently a senior at New York University pursuing a double major in Computer Science and Data Science. I enjoy exploring
+      different avenues of research from applications and limitations of AI to investigating novel methods to solve problems. I work with Dr. Lerrel Pinto at Grail Lab on robotics and with Dr. Pascal Wallisch
+      at Fox Lab to study music and its relationship with the mind. I also started <a href="https://lectureme.ai">LectureMe</a>, a platform that aims to make education
+      border-free and barrier-less. 
+    </p>
   </main>
 </body>
 </html>
