--- a/research.html
+++ b/research.html
@@ -10,7 +10,7 @@
     <nav>
       <a href="index.html">About</a>
       <a href="research.html">Research</a>
-      <a href="work.html">Work</a>
+      <a href="work.html">Work & Projects</a>
     </nav>
   </header>
   
