--- a/work.html
+++ b/work.html
@@ -10,12 +10,12 @@
     <nav>
       <a href="index.html">About</a>
       <a href="research.html">Research</a>
-      <a href="work.html">Work</a>
+      <a href="work.html">Work & Projects</a>
     </nav>
   </header>
   
   <main>
-    <h1>Work Experience</h1>
+    <h1>Work  & Projects</h1>
     <p>Here is a list of places I've worked at.</p>
   </main>
 </body>
