--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p class = 'intro'>Hi, I'm Ibrahim and I love to learn about how things work. </p>
     <p class = 'brief'>I am currently a senior at New York University pursuing a double major in Computer Science and Data Science. I enjoy exploring
       different avenues of research from applications and limitations of AI to investigating novel methods to solve problems. I work with Dr. Lerrel Pinto at Grail Lab on robotics and with Dr. Pascal Wallisch
-      at Fox Lab to study music and its relationship with the mind. I also started <a href="https://lectureme.ai">LectureMe</a>, a platform that aims to make education
+      at Fox Lab to study music and its relationship with the mind. I also started <a href="https://www.lectureme.ai/">LectureMe</a>, a platform that aims to make education
       border-less and barrier-free. 
     </p>
   </main>
