--- a/index.html
+++ b/index.html
@@ -2,27 +2,66 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ibrahim</title>
+  <title>Ibrahim Sheikh</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html">About</a>
-      <a href="research.html">Research</a>
-      <a href="work.html">Work & Projects</a>
-    </nav>
-  </header>
+  <nav id="sidebar">
+    <a href="#about">About</a>
+    <a href="#research">Research</a>
+    <a href="#work-experience">Work Experience</a>
+    <a href="#projects">Projects</a>
+    <a href="#volunteering">Volunteering</a>
+  </nav>
   
   <main>
-    <h1 class = 'index'>  Ibrahim Sheikh</h1>
+    <section id="about">
+      <h1 class='index'>Ibrahim Sheikh</h1>
+      <p class='intro'>Hi, I'm Ibrahim and I love to learn about how things work.</p>
+      <p class='brief'>I am currently a senior at New York University pursuing a double major in Computer Science and Data Science. I enjoy exploring
+        different avenues of research from applications and limitations of AI to investigating novel methods to solve problems. I work with Dr. Lerrel Pinto at Grail Lab on robotics and with Dr. Pascal Wallisch
+        at Fox Lab to study music and its relationship with the mind. I also started <a href="https://www.lectureme.ai/">LectureMe</a>, a platform that aims to make education
+        border-less and barrier-free. </p>
+    </section>
+    
+    <section id="research">
+      <h2>Research</h2>
+      <!-- Add your research details here -->
+    </section>
 
-    <p class = 'intro'>Hi, I'm Ibrahim and I love to learn about how things work. </p>
-    <p class = 'brief'>I am currently a senior at New York University pursuing a double major in Computer Science and Data Science. I enjoy exploring
-      different avenues of research from applications and limitations of AI to investigating novel methods to solve problems. I work with Dr. Lerrel Pinto at Grail Lab on robotics and with Dr. Pascal Wallisch
-      at Fox Lab to study music and its relationship with the mind. I also started <a href="https://www.lectureme.ai/">LectureMe</a>, a platform that aims to make education
-      border-less and barrier-free. 
-    </p>
+    <section id="work-experience">
+      <h2>Work Experience</h2>
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="timeline-item-content">
+            <img src="Citi.png" alt="Company Logo" class="timeline-logo">
+            <h3>ICG-Tech Analyst</h3>
+            <p>Job description or other details go here.</p>
+            <span class="date">Start Date - End Date</span>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-item-content">
+            <img src="path-to-your-logo2.png" alt="Company Logo" class="timeline-logo">
+            <h3>Position Title - Company Name</h3>
+            <p>Job description or other details go here.</p>
+            <span class="date">Start Date - End Date</span>
+          </div>
+        </div>
+        <!-- Continue adding items, they will automatically alternate sides -->
+      </div>
+    </section>
+    
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <!-- Add your projects details here -->
+    </section>
+
+    <section id="volunteering">
+      <h2>Volunteering</h2>
+      <!-- Add your volunteering details here -->
+    </section>
   </main>
 </body>
 </html>
