--- a/index.html
+++ b/index.html
@@ -18,15 +18,19 @@
     <section id="about">
       <h1 class='index'>Ibrahim Sheikh</h1>
       <p class='intro'>Hi, I'm Ibrahim and I love to learn about how things work.</p>
-      <p class='brief'>I am currently a senior at New York University pursuing a double major in Computer Science and Data Science. I enjoy exploring
-        different avenues of research from applications and limitations of AI to investigating novel methods to solve problems. I work with Dr. Lerrel Pinto at Grail Lab on robotics and with Dr. Pascal Wallisch
-        at Fox Lab to study music and its relationship with the mind. I also started <a href="https://www.lectureme.ai/">LectureMe</a>, a platform that aims to make education
-        border-less and barrier-free. </p>
+      <p class='brief'>I am currently a senior at New York University pursuing a double major in Computer Science and Data Science. I work with Dr. Lerrel Pinto at Grail Lab on robotics and with Dr. Pascal Wallisch
+        at Fox Lab to study music and its relationship with the mind. I also started <a href="https://www.lectureme.ai/">LectureMe</a>, a platform that aims to safely integrate
+        artificial intelligence into education. Outside of work, I enjoy playing Soccer, walking around, and I've recently started to learn the piano </p>
     </section>
     
     <section id="research">
       <h2>Research</h2>
       <!-- Add your research details here -->
+      <h3>Grail Lab</h3>
+      <p> 
+        At Grail Lab, I work with Dr. Lerrel Pinto on the intersection of large vision models and robotics. 
+        Currently, we are exploring 
+      </p>
     </section>
 
     <section id="work-experience">
